--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.header{
+    background: #6900d1;
+}
+
+
 .carousel-inner {
     border-top: 1px;
     border-left: 1px;
@@ -38,7 +43,20 @@
 .footer h3{
     color: aliceblue;
     text-decoration: underline;
+    transition: all .5s ease-in-out;
+}
+
+.footer h3:hover{
+    background-color: rgb(121, 114, 105);
 }
 .footer a {
     margin: 5px;
+}
+/* Kırkpınar */
+.Kirkpinar{
+   
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6),url(Progeimg/kirkpinaredirne.jpg));
+    background-position: center;
+    background-size: cover;
+    background-attachment:fixed ;
 }
