--- a/kirkpinarstyle.css
+++ b/kirkpinarstyle.css
@@ -2,15 +2,31 @@
 
  
 /*
-.Kirkpinarimg{
-    height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6),url(Progeimg/kirkpinaredirne.jpg));
+.Kirkpinarcontainer{
+    min-height: 100vh;
+    width: 100%;
+  background: url(Progeimg/kırkpınar.jpg);
     background-position: center;
-    background-size: cover;
-    background-attachment:fixed ;
+   background-size:cover ;
+   position: relative;
 } */
 
-.Kirkpinarimg{
-    background-color: #678280;
-    
-} 
+#resim{
+  border-radius: 15px 50px 30px;
+  padding: 20px; 
+  width: 25%;
+  height: 50%;
+}
+#yazi1 {
+    border-style:outset ;
+    padding: 25px;
+    background-repeat: no-repeat;
+   
+  }
+
+  #resim2{
+    border-radius: 15px 50px 30px;
+    padding: 20px; 
+    width: 25%;
+    height: 50%;
+  }
